# neon-filemanager

./: .editorconfig  .env  .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs  main.rs
