[package]
name = "filemanager-rust"
version = "0.1.0"
authors = ["Russell Jones <jonesrussell42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }

serde_json = "1.0.44"
glob = "0.3.0"
