[package]
name = "neon-filemanager"
version = "0.1.0"
authors = ["Russell Jones <jonesrussell42@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_filemanager"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
neon-serde = "0.3.0"
serde_derive = "1.0.103"
serde = "1.0.103"
serde_json = "1.0.44"
glob = "0.3.0"
